# TalesOfTools

./: BerseriaTools.sln  README.md  publish.cmd
.github/workflows/: dotnet.yml
hexpat/: scpack.hexpat  scpackr.hexpat  sdb.hexpat  tofhdb.hexpat  zarc.hexpat
tools/ScpkTool/: Program.cs  ScpkTool.csproj  ScriptNameHash.cs  ScriptPackage.cs  StreamExtensions.cs  TemporarySeek.cs
tools/TLTool/: AnalyzeNamesCommand.cs  BigEndianBinaryReader.cs  BigEndianBinaryWriter.cs  BinaryPrimitivesEx.Int24.cs  BinaryPrimitivesEx.Int40.cs  BinaryStream.cs  CompressionUtility.cs  DataEncryptHeader.cs  DataHeader.InternalHeaderEntry.cs  DataHeader.RawFile.cs  DataHeader.RawHeader.cs  DataHeader.cs  DataHeaderEntry.cs  DdsHeader.cs  DdsPixelFormat.cs  DecryptCommand.cs  DecryptDlcHeaderCommand.cs  DumpNamesCommand.cs  FileDataSource.cs  IDataHeaderEntry.cs  IDataSource.cs  InsertCommand.cs  KeyComparer.cs  ListHashesCommand.cs  ListNamesCommand.cs  NameDictionary.cs  NameHash.cs  PackCommand.cs  Program.cs  QueryFileCommand.cs  QueryNamesCommand.cs  ScriptPackCommand.cs  ScriptPackage.cs  StreamExtensions.cs  SubReadStream.cs  TLCrypt.cs  TLFileDataSource.cs  TLHash.cs  TLTool.csproj  TemporarySeek.cs  (+3 more)
tools/TLTool/Commands/: AnalyzeNamesCommand.cs  DecryptCommand.cs  DecryptDlcHeaderCommand.cs  DumpNamesCommand.cs  InsertCommand.cs  ListHashesCommand.cs  PackCommand.cs  (+9 more)
tools/TO13NameDumper/: .gitignore  CMakeLists.txt  generate_vc17.cmd  generate_vc17_x64.cmd  generate_vc17_x86.cmd  vcpkg-configuration.json  vcpkg.json
tools/TO13NameDumper/source/: main.cpp  version.cpp  winmm.cpp
(+26 files in other folders)
